--- a/index.html
+++ b/index.html
@@ -92,11 +92,65 @@
 
         </div>
 
-        <div class="modal-footer">
+        <div class="modal-footer"> 
+
         </div>
         
       </div>
     </div>
 
   </div>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
+
+    <div class="container">
+
+      <a class="navbar-brand" href="#">
+        <img src="img/logo.svg" alt="">
+      </a>
+
+      <button class="navbar-toggler" type="button" aria-controls="navbarNavDropdown" aria-expanded="false"
+        aria-label="Abre ou fecha o menu" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+
+        <ul class="navbar-nav">
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Pricing</a>
+
+            <ul class="dropdown-menu">
+              <li><a href="#" class="dropdown-item">Sub-menu</a></li>
+              <li><a href="#" class="dropdown-item">Sub-menu</a></li>
+              <li><a href="#" class="dropdown-item">Sub-menu</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown link
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+
+        </ul>
+
+    
+
 </body>  
