--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
     </div>
 
   </div>
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
 
     <div class="container">
@@ -150,6 +149,12 @@
           </li>
 
         </ul>
+        <a href="#" class="btn btn-primary ms-lg-5">Faça seu login</a>
+
+      </div>
+
+    </div>
+  </nav>      
 
     
 
