--- a/index.html
+++ b/index.html
@@ -156,6 +156,21 @@
     </div>
   </nav>      
 
+  <div id="carouselExampleIndicators" class="carousel slide carousel-fade " data-bs-ride="carousel"
+  data-bs-interval="3000" data-bs-pause="false">
+
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+      aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+      aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+      aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+      aria-label="Slide 4"></button>
+  </div>
+
+
     
 
 </body>  
