--- a/index.html
+++ b/index.html
@@ -170,6 +170,27 @@
       aria-label="Slide 4"></button>
   </div>
 
+  <div class="carousel-inner">
+
+    <div class="carousel-item active">
+      <img src="img/1.jpg" class="d-block w-100" alt="...">
+
+      <div class="carousel-caption d-none d-md-block">
+        <p class="h1">First slide label</p>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+
+    </div>
+
+    <div class="carousel-item">
+      <img src="img/2.jpg" class="d-block w-100" alt="...">
+    </div>
+
+    <div class="carousel-item">
+      <img src="img/3.jpg" class="d-block w-100" alt="...">
+    </div>
+
+  </div>
 
     
 
