--- a/index.html
+++ b/index.html
@@ -193,19 +193,27 @@
   </div>
 
   
-<div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-    data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Slide anterior</span>
-  </button>
+  <div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Slide anterior</span>
+    </button>
 
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-    data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
 
-</div>
+  </div>
+
+  <div class="container">
+
+    <div class="row my-5 align-items-center">
+
+      <div class="col-lg-6">
+        <img src="img/arquiteta2.jpg" alt="" class="img-fluid">
+      </div>
 
 </body>  
