--- a/index.html
+++ b/index.html
@@ -215,5 +215,20 @@
       <div class="col-lg-6">
         <img src="img/arquiteta2.jpg" alt="" class="img-fluid">
       </div>
+      <div class="col-lg-6">
+        <h2>Lorem ipsum dolor sit amet const ectetur adipisicing elit.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam optio cum molestiae numquam nulla? Obcaecati
+          similique at nesciunt tenetur quis corrupti laborum neque ipsam doloremque. Incidunt quam deleniti
+          consequuntur impedit facere. </p>
+
+        <p>Facilis et aut debitis consectetur rem, autem officiis porro necessitatibus dicta reiciendis rerum modi quae
+          dolorem quod perspiciatis accusantium!</p>
+
+        <a href="#" class="btn btn-dark">Lorem Ipsum</a>
+      </div>
+
+    </div>
+
+  </div>    
 
 </body>  
