Final da section - h3 para o texto e um btn

--- a/index.html
+++ b/index.html
@@ -229,6 +229,20 @@
 
     </div>
 
-  </div>    
+  </div> 
+  
+  <div class="container-fluid bg-dark py-5">
+
+    <div class="container text-center">
+
+      <h3 class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam optio cum molestiae numquam
+        nulla obcaecati similique at </h3>
+
+      <button class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Faça seu
+        cadastro</button>
+
+    </div>
+
+  </div>
 
 </body>  
