--- a/index.html
+++ b/index.html
@@ -245,4 +245,40 @@
 
   </div>
 
+  <div class="container">
+
+    <div class="row text-center my-5">
+
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <img src="img/icon-1.png" alt="">
+        <h4>Lorem ipsum</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam optio cum molestiae numquam nulla.</p>
+        <a href="#" class="btn btn-dark">Lorem Ipsum</a>
+      </div>
+
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <img src="img/icon-2.png" alt="">
+        <h4>Lorem ipsum</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam optio cum molestiae numquam nulla.</p>
+        <a href="#" class="btn btn-dark">Lorem Ipsum</a>
+      </div>
+
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <img src="img/icon-3.png" alt="">
+        <h4>Lorem ipsum</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam optio cum molestiae numquam nulla.</p>
+        <a href="#" class="btn btn-dark">Lorem Ipsum</a>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
+        <img src="img/icon-4.png" alt="">
+        <h4>Lorem ipsum</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam optio cum molestiae numquam nulla.</p>
+        <a href="#" class="btn btn-dark">Lorem Ipsum</a>
+      </div>
+
+    </div>
+
+  </div>
+
 </body>  
