--- a/index.html
+++ b/index.html
@@ -281,4 +281,9 @@
 
   </div>
 
+  <footer class="container-fluid bg-dark py-3">
+    <p class="m-0 text-center text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam optio cum
+      molestiae numquam nulla.</p>
+  </footer>
+
 </body>  
