--- a/index.html
+++ b/index.html
@@ -286,4 +286,8 @@
       molestiae numquam nulla.</p>
   </footer>
 
+  <script src="js/jquery-3.6.0.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/carousel.js"></script>
+
 </body>  
